# SymbolicMath

./: README.md
BranchCuts/: .gitignore  LICENSE  README.md  pyproject.toml
BranchCuts/docs/: api.md  architecture.md  dev_guide.md  examples.md  theory.md
BranchCuts/examples/: basic_usage.py  composite_expression.py
BranchCuts/notebooks/: README.md  exploration.ipynb
BranchCuts/src/branchcuts/: __init__.py  classification.py  computation.py  core.py  inventory.py  post_simplify.py
BranchCuts/tests/: test_classification.py  test_core.py  test_failfast_validation.py  test_post_simplify.py  test_restrictedexpr_branchcuts.py  test_restrictedexpr_detection_fix.py  test_restrictedexpr_ensure_neutral_assoc.py  test_restrictedexpr_nameerror_fix.py
MultipleIntegrate/: .gitignore  README.md  pyproject.toml
MultipleIntegrate/docs/: api.md  changelog.md  contributing.md  decomposition.md  examples.md  index.md  strategies.md  testing.md  theory.md
MultipleIntegrate/multiple_integrate/: __init__.py  core.py
MultipleIntegrate/notebooks/: multiple_integration.ipynb
MultipleIntegrate/src/multiple_integrate/: __init__.py  core.py  regions.py
MultipleIntegrate/tests/: __init__.py  helpers.py  test_boole_piecewise.py  test_coordinate_changes.py  test_disk_radial_false_positive.py  test_multiple_integrate.py  test_performance_regressions.py  test_reference_examples.py  test_reference_examples_notebook.py  test_region_order_sympy_convention.py  test_regions_advanced_shapes.py  test_regions_boxes_and_simplex.py  test_regions_classification_priority.py  test_regions_disk_and_ball.py  test_regions_graph_and_simplex.py  test_regions_graph_reversal.py  test_regions_interactions.py  test_regions_misclassification.py  test_regions_moments_box_simplex.py  test_regions_moments_disk_ball.py  test_regions_parse.py  test_regions_radial.py  test_regions_symmetry.py  test_regression_constants_and_caching.py  test_regression_symmetry_and_inner_1d.py  test_simplex_dirichlet_engine.py  test_singular_and_divergent_cases.py  test_supported_families.py
PDESolve/: liesymm.py
PDESolve/liepde/: README.md  pyproject.toml
PDESolve/liepde/benchmarks/: benchmark_common_pdes.py
PDESolve/liepde/examples/: basic_demo.py
PDESolve/liepde/notebooks/: demo.ipynb
PDESolve/liepde/src/liepde/: __init__.py  api.py  canonical.py  charts.py  coordinates.py  diagnostics.py  frobenius.py  geometry.py  lie.py  optimal.py  pde.py  performance.py  reduction.py  symmetry.py  utils.py  verify.py  workflows.py
PDESolve/liepde/tests/: conftest.py  test_smoke.py
