[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "branchcuts"
version = "0.1.0"
description = "Prototype SymPy tools for symbolic branch-cut jumps, seam sampling, and post-simplification"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Bhuvanesh Bhatt"}]
dependencies = [
  "sympy>=1.12",
]
keywords = ["sympy", "branch cuts", "special functions", "symbolic computation", "complex analysis"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: GPL v3 License",
  "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Repository = "https://github.com/BhuvaneshBhatt/SymbolicMath"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
